add gabagool img

--- a/recipes/gabagool.html
+++ b/recipes/gabagool.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Gabagool</h1>
-    <img src="../img/">
+    <img src="../img/gabagool.jpeg">
     <div class="caption">da best grool you'll eva gool.</div>
 
     <p>Aliquip pariatur sunt eiusmod adipisicing adipisicing minim ut consectetur do aliquip. Aute cillum amet reprehenderit amet consequat enim dolor voluptate reprehenderit duis. Lorem mollit cupidatat in veniam nulla esse exercitation est nisi mollit veniam aliqua officia cupidatat. Sit duis qui sit in exercitation ad magna do in magna dolor incididunt exercitation. Labore id in aliquip officia occaecat ut irure aute aliquip qui.</p>
